fixed spacing between header and container

--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -7,10 +7,6 @@
   clear: both;
 }
 
-.container-fluid {
-  margin-top: 20px;
-}
-
 .divider{
   height: 3px;
   background-color: #999;
