--- a/src/components/Contact/style.css
+++ b/src/components/Contact/style.css
@@ -56,9 +56,6 @@ h4 {
   clear: both;
 }
 
-.container-fluid {
-  margin-top: 20px;
-}
 
 @media only screen and (max-width: 600px) {
  
