--- a/src/components/Portfolio/style.css
+++ b/src/components/Portfolio/style.css
@@ -1,7 +1,3 @@
-.container-fluid {
-  margin-top: 20px;
-}
-
 h4 {
   color: #4aaaa5;
   font-family: 'Georgia', Times, 'Times New Roman', serif;
@@ -12,7 +8,6 @@ h4 {
   background-color: #999;
   margin-bottom: 20px;
 }
-
 
 .container-fluid {
   min-height: 1000px;
